--- a/styles.css
+++ b/styles.css
@@ -10,31 +10,39 @@ body {
 }
 #box {
     background-color: #DFF5FF;
-    margin-top: 20%;
-    width: 80%;
+    margin-top: 10%;
+    width: 60%;
     height: 400px;
-    border-radius: 10%;
+    border-radius: 15px;
 }
 div.mb-3{
     padding-top: 20px;
 }
 label.form-label{
-    padding-left: 25%;
+    justify-content: center;
     color:#378CE7;
     font-size: larger;
 }
+
+.container .form-label{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 /* small.form-text.text-muted{
     text-align: center;
     padding-left: 25%;
 } */
+
 input.form-control{
     border-radius: 5px;
 }
 
 input.btn{
-    margin-left: 44%;
     background-color: #378CE7;
     color:#DFF5FF;
+    margin-left: 45%;
+    margin-left: 45%;
 }
 input.btn:hover{
     background-color: #5356FF;
