--- a/FE/views/pages/index.ejs
+++ b/FE/views/pages/index.ejs
@@ -31,11 +31,7 @@
 
     <div class="container" id="toDoBox">
       <div class="mb-3">
-        <form
-          action="http://localhost:8080/addTodo"
-          method="POST"
-          enctype="application/json"
-        >
+        <form action="http://localhost:8080/addTodo" method="POST">
           <label for="" class="form-label"
             >Write down your To-Do Missions</label
           >
@@ -57,14 +53,15 @@
           <h1 id="listsText">Lists:</h1>
           <ul class="list-group custom-list-group" id="listGroup">
             <% for (let i = 0; i < toDo.length; i++) { %>
-            <li class="list-group-item">
+            <li class="list-group-item" id="listLi">
               <%= toDo[i] %>
-              <button
-                id="buttonClose"
-                type="button"
-                class="btn-close"
-                aria-label="Close"
-              ></button>
+              <a
+                class="btn"
+                href="http://localhost:8080/deleteTodo?todo=<%= encodeURIComponent(toDo[i]) %>"
+                role="button"
+                id="closeBtn"
+                >X</a
+              >
             </li>
             <% } %>
           </ul>
@@ -81,7 +78,7 @@
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
       crossorigin="anonymous"
     ></script>
-    <script src="InsertToDoList.js"></script>
+    <script src="delete_edit_todo.js"></script>
     <link rel="stylesheet" href="styles.css" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
