--- a/FE/public/styles.css
+++ b/FE/public/styles.css
@@ -24,6 +24,7 @@ label.form-label{
     justify-content: center;
     color:#378CE7;
     font-size: larger;
+    font-weight: 450;
 }
 
 .container .form-label{
@@ -68,10 +69,28 @@ input.form-control{
     display: flex;
     justify-content: space-between;
 }
-#closeBtn{
+#closeBtnA{
+    padding-right: 2px;
     align-self: right;
-    color: #5356FF;
+    /* color: #5356FF; */
     padding-top: 0px;
     padding-bottom: 1px;
+    /* font-weight: bold; */
+    display: flex;
+    align-items: center;
+}
+.btn.btn-outline-primary{
+    height: 22px;
+    width: 10px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+/* #closeBtnDiv{
+    border: 1px solid #5356FF;
+} */
+#xSign{
+    font-size: small;
     font-weight: bold;
+    margin: 0;
 }
