--- a/FE/views/pages/index.ejs
+++ b/FE/views/pages/index.ejs
@@ -13,7 +13,11 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-
+    <!-- Bootstrap-datepicker CSS -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css"
+      rel="stylesheet"
+    />
     <!-- Bootstrap CSS v5.2.1 -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -35,6 +39,7 @@
           <label for="" class="form-label"
             >Write down your To-Do Missions</label
           >
+          <!--Type Todo Mission-->
           <input
             type="text"
             class="form-control"
@@ -44,7 +49,8 @@
             placeholder=""
           />
           <small id="helpId" class="form-text text-muted"></small>
-
+          <!-- Date Picker-->
+          <input type="text" id="datepicker" name="date" />
           <button type="submit" value="Submit" id="submitBtn" class="btn">
             Submit
           </button>
@@ -83,12 +89,25 @@
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
       crossorigin="anonymous"
     ></script>
-    <script src="delete_edit_todo.js"></script>
-    <link rel="stylesheet" href="styles.css" />
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <!-- Bootstrap-datepicker JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
       crossorigin="anonymous"
     ></script>
+    <!-- JQuery DatePicker-->
+    <script>
+      $(document).ready(function () {
+        $("#datepicker").datepicker({
+          format: "yyyy-mm-dd", // specify the date format
+          // You can add more options here as per your requirements
+        });
+      });
+    </script>
+    <!-- CSS File -->
+    <link rel="stylesheet" href="styles.css" />
   </body>
 </html>
