--- a/FE/public/styles.css
+++ b/FE/public/styles.css
@@ -62,7 +62,7 @@ label.form-label{
     background-color: #67C6E3;
 }
 #datepicker, #calendarImg{
-    padding: 0px;
+    padding: 2px;
 }
 #calendarImg:hover{
     background-color: #5356FF;
@@ -86,6 +86,21 @@ label.form-label{
     height: 80%;
     padding-bottom: 10px;
     padding-top: 10px;
+}
+#listLi{
+    padding-bottom: 0px;
+}
+#listLi div{
+    display: flex;
+    overflow: hidden;
+}
+#date{
+    background-color: #5356FF;
+    border-radius: 15px;
+    height: 25px;
+    width:128px; 
+    color:white;
+    text-align: center;  
 }
 #listsText{
     font-size: xx-large;
