--- a/FE/views/pages/index.ejs
+++ b/FE/views/pages/index.ejs
@@ -75,20 +75,23 @@
           <ul class="list-group custom-list-group" id="listGroup">
             <% for (let i = 0; i < toDo.length; i++) { %>
             <li class="list-group-item" id="listLi">
-              <%= toDo[i].toDoMission %> <%= toDo[i].toDoDate %>
-              <!--delete todo button-->
-              <a
-                class="btn"
-                href="http://localhost:8080/deleteTodo?todo=<%= encodeURIComponent(toDo[i].toDoMission) %>"
-                role="button"
-                id="closeBtnA"
-              >
-                <!-- <div class="container" id="closeBtnDiv"> -->
-                <button type="button" class="btn btn-outline-primary">
-                  <span id="xSign">X</span>
-                </button>
-                <!-- </div> -->
-              </a>
+              <%= toDo[i].toDoMission %>
+              <div>
+                <p id="date"><%= toDo[i].toDoDate %></p>
+                <!--delete todo button-->
+                <a
+                  class="btn"
+                  href="http://localhost:8080/deleteTodo?todo=<%= encodeURIComponent(toDo[i].toDoMission) %>"
+                  role="button"
+                  id="closeBtnA"
+                >
+                  <!-- <div class="container" id="closeBtnDiv"> -->
+                  <button type="button" class="btn btn-outline-primary">
+                    <span id="xSign">X</span>
+                  </button>
+                  <!-- </div> -->
+                </a>
+              </div>
             </li>
             <% } %>
           </ul>
