--- a/FE/public/styles.css
+++ b/FE/public/styles.css
@@ -95,8 +95,8 @@ label.form-label{
     overflow: hidden;
 }
 #date{
-    background-color: #5356FF;
-    border-radius: 15px;
+    background-color: #378CE7;
+    border-radius: 10px;
     height: 25px;
     width:128px; 
     color:white;
