--- a/FE/views/pages/index.ejs
+++ b/FE/views/pages/index.ejs
@@ -47,7 +47,7 @@
               name="msg"
               id="insertBox"
               aria-describedby="helpId"
-              placeholder=""
+              placeholder="Ex:Absence Class :)))"
             />
             <small id="helpId" class="form-text text-muted"></small>
             <div>
@@ -57,6 +57,7 @@
                 class="form-control"
                 id="datepicker"
                 name="date"
+                placeholder="Pick date"
               />
               <img
                 id="calendarImg"
